// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecentSearchesPanel Show More button is shown if more pages are available 1`] = `
<DocumentFragment>
  <div
    class="recent-searches-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Recent searches
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
            <th>
              <small>
                Date
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=test&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-query-text"
                    >
                      test
                    </span>
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-state="closed"
              >
                in 15 years
              </span>
            </td>
          </tr>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=r:sourcegraph&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      r
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      sourcegraph
                    </span>
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-state="closed"
              >
                in 15 years
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="text-center py-3"
      >
        <button
          class="btn btnLink test-repositories-panel-show-more"
          type="button"
        >
          Show more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RecentSearchesPanel Show More button loads more items 1`] = `
<DocumentFragment>
  <div
    class="recent-searches-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Recent searches
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
            <th>
              <small>
                Date
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=test&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-query-text"
                    >
                      test
                    </span>
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-state="closed"
              >
                in 15 years
              </span>
            </td>
          </tr>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=r:sourcegraph&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      r
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      sourcegraph
                    </span>
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-state="closed"
              >
                in 15 years
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <span
        aria-live="polite"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        Loading more recent searches
      </span>
      <div
        class="text-center py-3"
      >
        <button
          class="btn btnLink test-repositories-panel-show-more"
          type="button"
        >
          Show more
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RecentSearchesPanel consecutive identical searches are correctly merged when rendered 1`] = `
<DocumentFragment>
  <div
    class="recent-searches-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Recent searches
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
            <th>
              <small>
                Date
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=test&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-query-text"
                    >
                      test
                    </span>
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-state="closed"
              >
                in 15 years
              </span>
            </td>
          </tr>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=r:sourcegraph&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      r
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      sourcegraph
                    </span>
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-state="closed"
              >
                in 15 years
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RecentSearchesPanel searches with no argument are skipped 1`] = `
<DocumentFragment>
  <div
    class="recent-searches-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Recent searches
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <table
        class="mt-2 resultsTable"
      >
        <thead>
          <tr
            class="resultsTableRow"
          >
            <th>
              <small>
                Search
              </small>
            </th>
            <th>
              <small>
                Date
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=test&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-query-text"
                    >
                      test
                    </span>
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-state="closed"
              >
                in 15 years
              </span>
            </td>
          </tr>
          <tr
            class="resultsTableRow"
          >
            <td>
              <small
                class="recentQuery"
              >
                <a
                  class="anchorLink"
                  href="/search?q=r:sourcegraph&patternType=literal"
                >
                  <span
                    class="text-monospace search-query-link"
                  >
                    <span
                      class="search-filter-keyword"
                    >
                      r
                    </span>
                    <span
                      class="search-filter-separator"
                    >
                      :
                    </span>
                    <span
                      class="search-query-text"
                    >
                      sourcegraph
                    </span>
                  </span>
                </a>
              </small>
            </td>
            <td
              class="resultsTableDateCol"
            >
              <span
                class="timestamp"
                data-state="closed"
              >
                in 15 years
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
